# Alpha-Miner

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
backend/: config.py  database.py  main.py
backend/api/: alphas.py  generate.py  pool.py  submit.py
backend/core/: expression_validator.py  gp_searcher.py  llm_generator.py  models.py  mutator.py  seed_pool.py
backend/models/: __init__.py  alpha.py  correlation.py  simulation.py
backend/schemas/: alpha.py  pool.py  simulation.py
backend/services/: diversity_filter.py  proxy_data.py  wq_interface.py
db/migrations/: env.py
db/migrations/versions/: 9a60d2247d8d_initial_schema.py
docs/: spec.md
docs/superpowers/plans/: 2026-03-25-phase1.md  2026-03-25-phase2-wq-interface.md  2026-03-26-docker-dev.md
docs/superpowers/specs/: 2026-03-25-phase1-design.md  2026-03-25-phase2-design.md  2026-03-26-phase3-design.md  (+3 more)
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
scripts/: seed_alpha101.py  show_candidates.py
tests/: conftest.py
tests/api/: test_alphas.py  test_generate.py  test_generate_gp.py  test_generate_llm.py  test_pool.py  test_submit.py
tests/core/: test_gp_searcher.py  test_llm_generator.py  test_models.py  test_mutator.py  test_seed_pool.py  test_validator.py
tests/models/: test_orm.py
tests/schemas/: test_schemas.py
tests/services/: test_diversity_filter.py  test_proxy_data.py  test_wq_interface.py
(+18 files in other folders)
