[project]
name = "alpha-miner"
version = "0.1.0"
description = "Automated alpha discovery and optimization tool for WorldQuant BRAIN"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    # Data validation
    "pydantic>=2.7.1",
    "pydantic-settings>=2.3.0",
    # Alpha generation
    "gplearn>=0.4.2",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scipy>=1.13.0",
    "scikit-learn>=1.4.2",
    # Proxy market data
    "yfinance>=0.2.38",
    # LLM
    "anthropic>=0.26.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
